automated BPM - Bronze Pack Method